update logicdb
