# app/Http/Controllers/ProductController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use Illuminate\Http\Request;
+use App\Models\Product;
 
 class ProductController extends Controller
 {
@@ -21,7 +22,7 @@ class ProductController extends Controller
     
     public function index()
     {
-        //
+        return response()->json(Product::all(), 200);
     }
 
     /**
@@ -43,10 +44,21 @@ class ProductController extends Controller
      * )
      */
     public function store(Request $request)
-    {
-        //
+   {
+        $request->validate([
+            'nama'   => 'required|string|max:255',
+            'harga' => 'required|integer|min:0',
+        ]);
+
+        $product = Product::create([
+            'nama'   => $request->nama,
+            'harga' => $request->harga,
+        ]);
+
+        return response()->json($product, 201);
+
     }
-/** 
+    /** 
      * @OA\Get(
      * path="/products/{id}",
      * summary="Mengambil detail produk berdasarkan ID  ",
@@ -59,9 +71,16 @@ class ProductController extends Controller
      * )
      * )
      */
-    public function show(string $id)
+
+     public function show($id)
     {
-        //
+        $product = Product::find($id);
+
+        if (!$product) {
+            return response()->json(['message' => 'Data tidak ditemukan'], 404);
+        }
+
+        return response()->json($product, 200);
     }
 
     /**
@@ -83,10 +102,19 @@ class ProductController extends Controller
     * @OA\Response(response=404, description="Tidak ditemukan")
     * )
     */
-    public function update(Request $request, string $id)
+    public function update(Request $request, $id)
     {
-        //
+        $product = Product::find($id);
+
+        if (!$product) {
+            return response()->json(['message' => 'Data tidak ditemukan'], 404);
+        }
+
+        $product->update($request->all());
+
+        return response()->json($product, 200);
     }
+
 
     /**
      * @OA\Delete(
@@ -98,8 +126,16 @@ class ProductController extends Controller
      * @OA\Response(response=404, description="Tidak ditemukan")
      * )
      */
-    public function destroy(string $id)
+    public function destroy($id)
     {
-        //
+        $product = Product::find($id);
+
+        if (!$product) {
+            return response()->json(['message' => 'Data tidak ditemukan'], 404);
+        }
+
+        $product->delete();
+
+        return response()->json(['message' => 'Data berhasil dihapus'], 200);
     }
 }
